<resources>
    <string name="app_name">Calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="txtOperaciones"></string>
    <string name="txtTecleado"></string>-
    <string name="btnUno">1</string>
    <string name="btnDos">2</string>
    <string name="btnTres">3</string>
    <string name="btnCuatro">4</string>
    <string name="btnCinco">5</string>
    <string name="btnSeis">6</string>
    <string name="btnSiete">7</string>
    <string name="btnOcho">8</string>
    <string name="btnNueve">9</string>
    <string name="btnCero">0</string>
    <string name="btnMenos">-</string>
    <string name="btnMas">+</string>
    <string name="btnMultiplicar">X</string>
    <string name="btnEntre">/</string>
    <string name="btnResultado">=</string>
    <string name="btnBorrar">AC</string>
</resources>